<resources>
    <string name="app_name">MusicApp</string>
    <string name="username">Tên đăng nhập: </string>
    <string name="password">Mật khẩu:</string>
    <string name="retryPassword">Nhập lại mật khẩu: </string>
    <string name="MusicPlayer">MUSIC <b>PLAYER</b></string>
    <string name="login">Đăng nhập</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>